dsp-cli/tests/snapshots/data_model_list_snapshots__data_model_list_builtins_csv_stdout.snap
---
source: tests/data_model_list_snapshots.rs
expression: stdout
---
name,iri,label,last_modified,is_builtin
knora-api,http://api.knora.org/ontology/knora-api/v2,,,true
limc,http://api.dasch.swiss/ontology/0897/limc/v2,Lexicon Iconographicum Mythologiae Classicae,2024-02-10T11:00:00.000000Z,false
rosetta,http://api.dasch.swiss/ontology/0838/rosetta/v2,Rosetta Stone project,2023-08-01T07:30:00.000000Z,false
salsah-gui,http://api.knora.org/ontology/salsah-gui/v2,,,true
standoff,http://api.knora.org/ontology/standoff/v2,,,true
