dsp-cli/tests/snapshots/data_model_list_snapshots__data_model_list_csv_stdout.snap
---
source: tests/data_model_list_snapshots.rs
expression: buf_to_string(&out_buf)
---
name,iri,label,last_modified,is_builtin
beol,http://api.dasch.swiss/ontology/0801/beol/v2,The BEOL data-model,2024-05-27T13:43:26.233048Z,false
biblio,http://api.dasch.swiss/ontology/0801/biblio/v2,Bibliographic references,,false
leibniz,http://api.dasch.swiss/ontology/0801/leibniz/v2,,2023-11-14T09:15:00.000000Z,false
newton,http://api.dasch.swiss/ontology/0801/newton/v2,,,false
