dsp-cli/tests/snapshots/data_model_list_snapshots__data_model_list_json_empty.snap
---
source: tests/data_model_list_snapshots.rs
expression: out
---
{"_meta":{"server":"api.dasch.swiss","auth":"anonymous","exit_code":0},"data":[]}
