dsp-cli/tests/snapshots/data_model_list_snapshots__data_model_list_lines_stderr.snap
---
source: tests/data_model_list_snapshots.rs
expression: buf_to_string(&err_buf)
---
[anonymous on api.dasch.swiss]
