dsp-cli/tests/snapshots/data_model_list_snapshots__data_model_list_prose_empty.snap
---
source: tests/data_model_list_snapshots.rs
expression: out
---
data-models on api.dasch.swiss (0):


[anonymous on api.dasch.swiss]
